# content_steering

./: .gitignore  README.md  analise.md  create_certs.sh  index.html  main.py  pyproject.toml  run_scenarios.py  starting_streaming.sh  stop_streaming.sh  tasks.py  template.md
.github/workflows/: ci.yml
Graphics/: Generate_aggregated_graphs.py  Generate_boxplots.py  Generate_compare_graphs.py  Generate_graphs.py  aggregate_logs.py  analyze_server_choices.py
Graphics/scripts/: aggregate_logs.py  analyze_server_choices.py
Graphics/scripts/plotting/: generate_boxplots.py  generate_compare_graphs.py
analysis/: aggregate_logs.py  analyze_server_choices.py
analysis/plotting/: generate_aggregated_graphs.py  generate_boxplots.py  generate_compare_graphs.py  generate_graphs.py  plot_utils.py
client/: index.html
client/assets/css/: style.css
client/assets/js/: charts.js  config.js  highlighter.js  main.js
config/: strategies.json
graphics/scripts/plotting/: generate_aggregated_graphs.py  generate_boxplots.py  generate_compare_graphs.py  generate_graphs.py
infra/docker/: client.Dockerfile  delivery-node.Dockerfile  gateway.Dockerfile  steering.Dockerfile
infra/k8s/: client_nginx.conf
infra/k8s/manifests/: k8s-certs.yaml  k8s-deploy.yaml  kind_config.yaml
infra/scripts/: create_k8s_certs.sh  setup_k8s.sh  stop_k8s.sh
scripts/: experiment_config.yaml  run_all.py  run_tudo.py
src/steering/: config.py  context.py  dash_parser.py  logging_csv.py  monitor.py  network_emulator.py  real_latency.py  server.py
src/steering/strategies/: __init__.py  base.py  best_selector.py  epsilon_greedy.py  lin_ucb.py  ppo.py  random_selector.py  round_robin.py  sac.py  thompson.py  ucb.py
steering-service/: config.json  requirements.txt
steering-service/src/: app.py  dash_parser.py  dynamic_latency_oracle.py  monitor.py  selector.py
steering-service/src/strategies/: __init__.py  base.py  d_ucb.py  epsilon_greedy.py  lin_ucb.py  oracle_best.py  simple.py  ucb.py
streaming-service/: Caddyfile-1  Caddyfile-2  Caddyfile-3  docker-compose.yml
tests/integration/: test_load.py  test_server.py
tests/unit/: test_dash_parser.py  test_logging_csv.py  test_ml_selectors.py  test_ml_strategies.py  test_network_emulator.py  test_real_latency.py  test_server_logic.py  test_strategies.py
