[project]
name = "content-steering"
version = "0.1.0"
description = "Content Steering Service with RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dotenv==0.20.0",
    "pandas>=1.5.3",
    "numpy>=1.21.0",
    "matplotlib>=3.7.1",
    "seaborn==0.12.2",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "kubernetes>=29.0.0",
]

[project.scripts]
certificados = "tasks:certificados"
setup-k8s = "tasks:setup_k8s"
stop-k8s = "tasks:stop_k8s"
dev = "tasks:dev"
client = "tasks:client"
docker-build = "tasks:docker_build"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.15",
]

[tool.hatch.build.targets.wheel]
packages = ["tasks.py"]

[tool.pyright]
extraPaths = ["src", "analysis/plotting"]
