[project]
name = "content-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.0",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "durationpy==0.10",
    "fastapi==0.136.3",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "greenlet==3.5.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "iniconfig==2.3.0",
    "kiwisolver==1.5.0",
    "kubernetes==36.0.2",
    "matplotlib==3.10.9",
    "multidict==6.7.1",
    "nodeenv==1.10.0",
    "numpy==2.4.6",
    "oauthlib==3.3.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "playwright==1.60.0",
    "pluggy==1.6.0",
    "propcache==0.5.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyee==13.0.1",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pyright==1.1.410",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==0.20.0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "ruff==0.15.15",
    "seaborn==0.12.2",
    "six==1.17.0",
    "starlette==1.2.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.48.0",
    "websocket-client==1.9.0",
    "yarl==1.24.2",
]

[tool.pyright]
extraPaths = ["analysis", "analysis/plotting", "src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
